# nodejs-sea-creator

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
example/: README.md  sea-config.json
src/: main.rs
