[package]
name = "nodejs-sea-creator"
version = "1.0.0"
description = "Simplify the creation of Node.js Single Executable Applications (SEAs)."
authors = ["Vedant Mohan Goyal"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/vedantmgoyal9/nodejs-sea-creator"
edition = "2021"

[dependencies]
apple-codesign = { version = "0.29.0", default-features = false }
clap = { version = "4.5.26", features = ["derive"] }
exe = "0.5.6"
flate2 = "1.0.35"
goblin = { version = "0.9.3", features = ["mach64"], default-features = false }
sha2 = "0.10.8"
serde_json = "1.0.137"
reqwest = "0.12.12"
tar = "0.4.43"
